--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@canvasjs/charts": "^3.7.21",
     "@material-tailwind/react": "^2.1.2",
+    "@mui/styled-engine": "^5.14.10",
+    "@mui/x-charts": "^6.0.0-alpha.12",
     "apexcharts": "^3.42.0",
     "chart.js": "^4.4.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
